[package]
name = "clak"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = [
    "net",
    "tokio-macros",
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }

[dev-dependencies]
env_logger = "0.11.3"
